log
Thu 16 May 2024 10:02:54 PM UTC: 
 tests:  0|5
total_score: 0/70
b055f6d
Fri 17 May 2024 10:12:04 PM UTC: 
 sudoku.c | 77 +++++++++++++++++++++++++++++++++++++++++++++++++++++-----------
 1 file changed, 64 insertions(+), 13 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:65:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   65 |    Node *aux = copy(n);
      |          ^~~
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:91:16: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   91 |       New->sudo[k][j] = i;
      |       ~~~~~~~~~^~~
sudoku.c:8:8: note: while referencing ‘sudo’
    8 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
964aa89
Fri 17 May 2024 10:12:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:91:16: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   91 |       New->sudo[k][j] = i;
      |       ~~~~~~~~~^~~
sudoku.c:8:8: note: while referencing ‘sudo’
    8 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
e9a2293
Fri 17 May 2024 10:28:31 PM UTC: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:86:16: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   86 |       New->sudo[k][j] = i;
      |       ~~~~~~~~~^~~
sudoku.c:8:8: note: while referencing ‘sudo’
    8 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
987b1ea
Fri 17 May 2024 10:29:39 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:87:16: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   87 |       New->sudo[k][j] = i;
      |       ~~~~~~~~~^~~
sudoku.c:8:8: note: while referencing ‘sudo’
    8 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
fad5f6b
Fri 17 May 2024 10:34:48 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
test.c: In function ‘test_isvalid’:
test.c:112:9: error: too few arguments to function ‘is_valid’
  112 |     if(!is_valid(initial)){
      |         ^~~~~~~~
In file included from test.c:5:
sudoku.c:63:5: note: declared here
   63 | int is_valid(Node* n, int x, int y)
      |     ^~~~~~~~
test.c:120:8: error: too few arguments to function ‘is_valid’
  120 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:63:5: note: declared here
   63 | int is_valid(Node* n, int x, int y)
      |     ^~~~~~~~
test.c:131:8: error: too few arguments to function ‘is_valid’
  131 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:63:5: note: declared here
   63 | int is_valid(Node* n, int x, int y)
      |     ^~~~~~~~
test.c:141:8: error: too few arguments to function ‘is_valid’
  141 |     if(is_valid(initial)){
      |        ^~~~~~~~
In file included from test.c:5:
sudoku.c:63:5: note: declared here
   63 | int is_valid(Node* n, int x, int y)
      |     ^~~~~~~~
test.c: In function ‘test_dfs’:
test.c:213:9: error: too few arguments to function ‘is_valid’
  213 |     if(!is_valid(final)){
      |         ^~~~~~~~
In file included from test.c:5:
sudoku.c:63:5: note: declared here
   63 | int is_valid(Node* n, int x, int y)
      |     ^~~~~~~~
Compilation failed
ec16d93
Fri 17 May 2024 10:35:34 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:87:16: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   87 |       New->sudo[k][j] = i;
      |       ~~~~~~~~~^~~
sudoku.c:8:8: note: while referencing ‘sudo’
    8 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
ffb2e20
Fri 17 May 2024 10:35:52 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
0722a4c
Fri 17 May 2024 11:29:23 PM UTC: 
 sudoku.c | 36 ++++++++++++++++++++++++++++++++++--
 1 file changed, 34 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:83:29: error: ‘num’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   83 |             int i = 3 * (num/3) + (k/3);
      |                         ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
8468d35
Fri 17 May 2024 11:32:52 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 0/70
7f6263d
Fri 17 May 2024 11:33:58 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:84:29: error: ‘num’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   84 |             int i = 3 * (num/3) + (k/3);
      |                         ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
418e2fb
Fri 17 May 2024 11:37:32 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
69ea621
Fri 17 May 2024 11:40:27 PM UTC: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
760fa10
Sat 18 May 2024 12:00:48 AM UTC: 
 sudoku.c | 51 +++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 51 insertions(+)
 tests:  1|4
total_score: 10/70
6202d2b
